# GUAR-III-PROJETO-OUTREMER

./: Cargo.toml  Pincelism_Master_Code.txt  codigo_completo_arnis.txt  config.toml  fix_arnis.py  gerar_df_final.sh  gerar_df_total.sh
.github/workflows/: release.yml
src/: args.rs  block_definitions.rs  colors.rs  data_processing.rs  deterministic_rng.rs  elevation_data.rs  floodfill.rs  floodfill_cache.rs  ground.rs  gui.rs  main.rs  map_renderer.rs  master_control.rs  osm_parser.rs  progress.rs  retrieve_data.rs  telemetry.rs  urban_ground.rs  version_check.rs  world_utils.rs
src/coordinate_system/: transformation.rs
src/coordinate_system/cartesian/xzbbox/: rectangle.rs  xzbbox_enum.rs
src/coordinate_system/geographic/: llpoint.rs
src/element_processing/: advertising.rs  amenities.rs  barriers.rs  bridges.rs  buildings.rs  doors.rs  emergency.rs  highways.rs  historic.rs  landmarks.rs  landuse.rs  leisure.rs  man_made.rs  mod.rs  natural.rs  power.rs  railways.rs  tree.rs  water_areas.rs  waterways.rs
src/element_processing/subprocessor/: buildings_interior.rar  buildings_interior.rs
src/map_transformation/: operator.rs
src/providers/: citygml_provider.rs  csv_provider.rs  dem_provider.rs  dsm_provider.rs  gdf_provider.rs  geojson_provider.rs  gpkg_provider.rs  ifc_provider.rs  indoor_utility_provider.rs  kml_provider.rs  lidar_provider.rs  mesh_provider.rs  mod.rs  mvt_provider.rs  osm_provider.rs  pbf_provider.rs  postgis_provider.rs  raster_provider.rs  tiles3d_provider.rs  vegetation_provider.rs  wfs_provider.rs
src/world_editor/: common.rs  java.rs  mod.rs
