[package]
name = "arnis"
version = "2.5.0"
edition = "2021"
description = "Arnis - Generate real life cities in Minecraft"
homepage = "https://github.com/louis-e/arnis"
repository = "https://github.com/louis-e/arnis"
license = "Apache-2.0"
readme = "README.md"

[profile.release]
lto = "thin"
overflow-checks = true

[features]
default = ["gui"]
gui = ["tauri", "tauri-plugin-log", "tauri-plugin-shell", "tokio", "rfd", "tauri-build", "bedrock"]
bedrock = ["bedrockrs_level", "bedrockrs_shared", "nbtx", "zip", "byteorder", "vek", "rusty-leveldb"]

[build-dependencies]
tauri-build = {version = "2", optional = true}

[dependencies]
base64 = "0.22.1"
byteorder = { version = "1.5", optional = true }
clap = { version = "4.5.53", features = ["derive", "env"] }
colored = "3.0.0"
csv = "1.3.0" # ADICIONADO: Leitor de planilhas de dados abertos do governo
dirs = "6.0.0"
fastanvil = "0.32.0"
fastnbt = "2.6.0"
flate2 = "1.1"
fnv = "1.0.7"
fs2 = "0.4"
geo = { version = "0.31.0", features = ["use-serde"] } # ATUALIZADO: Suporte a Serde para Indoor Utilities
geozero = { version = "0.13.0", features = ["with-wkb", "with-geo"] } # ADICIONADO: Decodificador WKB para GeoPackage
image = "0.25"
indicatif = "0.17.11"
itertools = "0.14.0"
jsonwebtoken = "10.3.0"
las = { version = "0.8", features = ["laz"] } # ADICIONADO: Leitor de nuvens de pontos LiDAR
log = "0.4.27"
once_cell = "1.21.3"
osmpbf = "0.3.3" # ADICIONADO: Decodificador de OSM PBF local
proj = "0.27.2" # ADICIONADO: Motor de Reprojeçăo Matemática (SIRGAS2000 -> WGS84)
quick-xml = "0.31.0" # ADICIONADO: Motor SAX Streaming para CityGML gigas sem afogar a RAM
rand = { version = "0.9.1", features = ["std", "std_rng"] }
rand_chacha = "0.9"
rayon = "1.10.0"
reqwest = { version = "0.13.1", features = ["blocking", "json", "query"] }
rfd = { version = "0.16.0", optional = true }
rusqlite = { version = "0.31.0", features = ["bundled"] } # ADICIONADO: Banco de dados local (GeoPackage)
rustc-hash = "1.1" # ADICIONADO: Hash de extrema performance O(1) para mapas de escala distrital
semver = "1.0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shapefile = "0.3.0" # ADICIONADO: Leitor de Dados do Geoportal do GDF
tauri = { version = "2", optional = true }
tauri-plugin-log = { version = "2.6.0", optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tiff = "0.9.0" # ADICIONADO: Leitor de Rasters GeoTIFF (MapBiomas, SISDIA)
tobj = "4.0.0" # ADICIONADO: Motor de leitura de malhas 3D (Wavefront OBJ)
tokio = { version = "1.48.0", features = ["full"], optional = true }
bedrockrs_level = { git = "https://github.com/bedrock-crustaceans/bedrock-rs", package = "bedrockrs_level", optional = true }
bedrockrs_shared = { git = "https://github.com/bedrock-crustaceans/bedrock-rs", package = "bedrockrs_shared", optional = true }
nbtx = { git = "https://github.com/bedrock-crustaceans/nbtx", optional = true }
vek = { version = "0.17", optional = true }
zip = { version = "0.6", default-features = false, features = ["deflate"], optional = true }
rusty-leveldb = { version = "3", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.0", features = ["Win32_System_Console"] }

[dev-dependencies]
tempfile = "3.23.0"