[package]
name = "pincelism"
version = "2.5.0"
edition = "2021"
rust-version = "1.75" # Restriçăo necessária para garantir a compatibilidade do compilador
description = "Pincelism (BESM-6 Engine) - Procedural Digital Twin Generator for the Federal District"
authors = ["Pincé - @pincelism"]
homepage = "https://github.com/nasnEdfbXOHEfuW5hi06gN/n-p70-fMh8I-k-oQ1-r-D-ZtpwC"
repository = "https://github.com/nasnEdfbXOHEfuW5hi06gN/n-p70-fMh8I-k-oQ1-r-D-ZtpwC"
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["gis", "procedural", "voxel", "digital-twin", "lidar"]
categories = ["science", "simulation", "rendering"]

[profile.release]
opt-level = 3          # Maximizaçăo de performance bruta e matemática
lto = "fat"            # Link-Time Optimization agressivo cruzando todos os crates
codegen-units = 1      # Compilaçăo em thread única: aumenta tempo de build, mas oblitera gargalos de execuçăo
panic = "abort"        # Desativa unwinding: poupa RAM e reduz o inchaço do binário
overflow-checks = true # Mantido como barreira de segurança física no processamento das malhas

[profile.dev]
opt-level = 1          # Impede que testes em ambiente local com arquivos pesados sejam estrangulados pela lentidăo do modo dev padrăo

[features]
default = ["gui"]
gui = ["tauri", "tauri-plugin-log", "tauri-plugin-shell", "tokio", "rfd", "tauri-build", "bedrock"]
bedrock = ["bedrockrs_level", "bedrockrs_shared", "nbtx", "zip", "byteorder", "vek", "rusty-leveldb"]

[build-dependencies]
tauri-build = {version = "2", optional = true}

[dependencies]
# Cartografia, Modelagem e Processamento de Dados Abertos
las = { version = "0.8", features = ["laz"] }
osmpbf = "0.3.3"
shapefile = "0.3.0"
tiff = "0.9.0"
tobj = "4.0.0"
csv = "1.3.0"
geozero = { version = "0.13.0", features = ["with-wkb", "with-geo"] }
geo = { version = "0.31.0", features = ["use-serde"] }
proj = "0.27.2"
quick-xml = "0.31.0"
fastanvil = "0.32.0"
fastnbt = "2.6.0"

# Estruturas de Alta Performance O(1) e Paralelismo
rayon = "1.10.0"
rustc-hash = "1.1"
fnv = "1.0.7"
once_cell = "1.21.3"

# Utilitários Sistęmicos, Master Control e Matemática
base64 = "0.22.1"
byteorder = { version = "1.5", optional = true }
clap = { version = "4.5.53", features = ["derive", "env"] }
colored = "3.0.0"
crossterm = "0.27.0"
dirs = "6.0.0"
flate2 = "1.1"
fs2 = "0.4"
image = "0.25"
indicatif = "0.17.11"
itertools = "0.14.0"
jsonwebtoken = "10.3.0"
log = "0.4.27"
rand = { version = "0.9.1", features = ["std", "std_rng"] }
rand_chacha = "0.9"
reqwest = { version = "0.13.1", features = ["blocking", "json", "query"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
semver = "1.0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# GUI e Comunicaçăo Externa (Isolados por Features)
rfd = { version = "0.16.0", optional = true }
tauri = { version = "2", optional = true }
tauri-plugin-log = { version = "2.6.0", optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tokio = { version = "1.48.0", features = ["full"], optional = true }
bedrockrs_level = { git = "https://github.com/bedrock-crustaceans/bedrock-rs", package = "bedrockrs_level", optional = true }
bedrockrs_shared = { git = "https://github.com/bedrock-crustaceans/bedrock-rs", package = "bedrockrs_shared", optional = true }
nbtx = { git = "https://github.com/bedrock-crustaceans/nbtx", optional = true }
vek = { version = "0.17", optional = true }
zip = { version = "0.6", default-features = false, features = ["deflate"], optional = true }
rusty-leveldb = { version = "3", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.0", features = ["Win32_System_Console"] }

[dev-dependencies]
tempfile = "3.23.0"