[package]
name = "pincelism"
version = "2.5.0"
edition = "2021"
rust-version = "1.75"
description = "Pincelism (BESM-6 Engine) - Procedural Digital Twin Generator for the Federal District"
authors = ["Pince - @pincelism"]
homepage = "https://github.com/nasnEdfbXOHEfuW5hi06gN/n-p70-fMh8I-k-oQ1-r-D-ZtpwC"
repository = "https://github.com/nasnEdfbXOHEfuW5hi06gN/n-p70-fMh8I-k-oQ1-r-D-ZtpwC"
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["gis", "procedural", "voxel", "digital-twin", "lidar"]
categories = ["science", "simulation", "rendering"]

[profile.release]
opt-level = 3          # Maximização de performance bruta e matemática
lto = "fat"            # Link-Time Optimization agressivo (Otimização Global)
codegen-units = 1      # Compilação monolítica: remove gargalos de execução
panic = "abort"        # Poupa RAM e reduz o inchaço do binário
overflow-checks = true # Barreira de segurança física no processamento de malhas

[profile.dev]
opt-level = 1          # Impede que o modo debug seja asfixiado por arquivos pesados

[features]
default = ["gui"]
gui = ["tauri", "tauri-plugin-log", "tauri-plugin-shell", "tokio", "rfd", "tauri-build", "bedrock"]
bedrock = ["bedrockrs_level", "bedrockrs_shared", "nbtx", "zip", "byteorder", "vek", "rusty-leveldb"]

[build-dependencies]
tauri-build = { version = "2", optional = true }

[dependencies]
# --- Cartografia, Modelagem e Processamento de Dados Abertos ---
las = { version = "0.8", features = ["laz"] }   # LiDAR (.las / .laz)
osmpbf = "0.3.3"                                 # OSM Binário Local
shapefile = "0.3.0"                              # GDF / IBGE / SICAR
tiff = "0.9.0"                                   # GeoTIFF (MapBiomas, DEM, DSM)
tobj = "4.0.0"                                   # Malhas 3D (.obj)
csv = "1.3.0"
lru = "0.12.3"
noise = "0.9.0"
# Elementos Pontuais (Postes/Árvores)
geozero = { version = "0.13.0", features = ["with-wkb", "with-geo"] }
geo = { version = "0.33.1", features = ["use-serde"] }
proj = "0.27.2"                                  # Motor de Reprojeção Geodésica
quick-xml = "0.31.0"                             # CityGML SAX Streaming (LOD2/LOD3)
fastanvil = "0.32.0"                             # Voxelização Java Edition
fastnbt = "2.6.0"                                # Decodificador NBT de alta velocidade

# --- Estruturas de Alta Performance O(1) e Paralelismo ---
rayon = "1.10.0"                                 # Processamento Multi-thread do Scanline
rustc-hash = "1.1"                               # Hash O(1) de ultra-performance BESM-6
fnv = "1.0.7"                                    # Alternativa para hashes pequenos
once_cell = "1.21.3"                             # Gestão de Singletons de Memória

# --- Utilitários Sistêmicos, Master Control e Matemática ---
base64 = "0.22.1"
byteorder = { version = "1.5", optional = true }
clap = { version = "4.5.53", features = ["derive", "env"] }
colored = "3.0.0"
crossterm = "0.27.0"

# Motor do Terminal HUD (Master Control)
dirs = "6.0.0"
flate2 = "1.1"
fs2 = "0.4"
image = "0.25"
indicatif = "0.17.11"
itertools = "0.14.0"
jsonwebtoken = "10.3.0"
log = "0.4.27"

# 🚨 BESM-6: Rand fixado na versão 0.8 (Estabilidade Governamental)
rand = { version = "0.8", features = ["std", "std_rng"] }
rand_chacha = "0.3"

reqwest = { version = "0.13.1", features = ["blocking", "json", "query"] }
rusqlite = { version = "0.31.0", features = ["bundled"] } # GeoPackage SQLite
postgres = "0.19"                                 # PostGIS / PostgreSQL
semver = "1.0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- GUI e Comunicação Externa (Isolados por Features) ---
rfd = { version = "0.16.0", optional = true }
tauri = { version = "2", optional = true }
tauri-plugin-log = { version = "2.6.0", optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tokio = { version = "1.48.0", features = ["full"], optional = true }
bedrockrs_level = { git = "https://github.com/bedrock-crustaceans/bedrock-rs", package = "bedrockrs_level", optional = true }
bedrockrs_shared = { git = "https://github.com/bedrock-crustaceans/bedrock-rs", package = "bedrockrs_shared", optional = true }
nbtx = { git = "https://github.com/bedrock-crustaceans/nbtx", optional = true }
vek = { version = "0.17", optional = true }
zip = { version = "0.6", default-features = false, features = ["deflate"], optional = true }
rusty-leveldb = { version = "3", optional = true }
version_check = "0.9.5"
mvt = "0.8"
bytes = "1.11.1"
dxf = "0.5"
rand_xoshiro = "0.6"
rand_core = "0.6"
rand_pcg = "0.3"
rand_distr = "0.4"
uuid = { version = "1.20.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.27.0"